# Sherpack

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  RELEASE_NOTES_v0.1.0.md
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  security.yml
crates/sherpack-cli/: Cargo.toml  README.md
crates/sherpack-cli/src/: display.rs  error.rs  exit_codes.rs  main.rs  util.rs
crates/sherpack-cli/src/commands/: convert.rs  create.rs  dep.rs  history.rs  inspect.rs  install.rs  keygen.rs  lint.rs  list.rs  mod.rs  package.rs  pull.rs  push.rs  recover.rs  repo.rs  rollback.rs  search.rs  show.rs  sign.rs  signing.rs  status.rs  template.rs  test.rs  uninstall.rs  upgrade.rs  validate.rs  verify.rs
crates/sherpack-cli/tests/: integration_tests.rs  snapshot_tests.rs
crates/sherpack-convert/: Cargo.toml  README.md
crates/sherpack-convert/src/: ast.rs  chart.rs  converter.rs  error.rs  go_template.pest  lib.rs  macro_processor.rs  parser.rs  transformer.rs  type_inference.rs
crates/sherpack-core/: Cargo.toml  README.md
crates/sherpack-core/src/: archive.rs  context.rs  error.rs  files.rs  lib.rs  manifest.rs  pack.rs  release.rs  schema.rs  secrets.rs  values.rs
crates/sherpack-engine/: Cargo.toml  README.md
crates/sherpack-engine/src/: cluster_reader.rs  engine.rs  error.rs  files_object.rs  filters.rs  functions.rs  lib.rs  pack_renderer.rs  secrets.rs  subchart.rs  suggestions.rs
crates/sherpack-kube/: Cargo.toml  README.md
crates/sherpack-kube/src/: actions.rs  annotations.rs  client.rs  diff.rs  error.rs  health.rs  hooks.rs  lib.rs  lookup.rs  progress.rs  release.rs  resources.rs  waves.rs
crates/sherpack-kube/src/crd/: analyzer.rs  apply.rs  detection.rs  mod.rs  parser.rs  policy.rs  protection.rs  schema.rs  strategy.rs
crates/sherpack-kube/src/storage/: chunked.rs  configmap.rs  file.rs  mock.rs  mod.rs  secrets.rs
crates/sherpack-repo/: Cargo.toml  README.md
crates/sherpack-repo/src/: backend.rs  cache.rs  config.rs  credentials.rs  dependency.rs  error.rs  http.rs  index.rs  lib.rs  lock.rs  oci.rs
docs/: ANALYSIS_HELM_DEPENDENCY_RISKS.md  ARCHITECTURE.md  CLI_REFERENCE.md  CONSOLIDATION.md  CONVERSION.md  CONVERTER_FIX_PLAN.md  DESIGN_CRD_HANDLING.md  DESIGN_CRD_PHASE2.md  DESIGN_HELM_DEPENDENCIES.md  FEATURE_IMPLEMENTATIONS_DESIGN.md  HELM_COMMUNITY_FRUSTRATIONS.md  HELM_COMPARISON.md  HELM_CONVERTER_DESIGN.md  HELM_FEATURES_ROADMAP.md  HELM_FEATURE_GAP_ANALYSIS.md  IMPROVED_TEMPLATE_FUNCTIONS.md  KILLER_FEATURES.md  LOOKUP.md  PHASE1_FUNCTIONS_DESIGN.md  PHASE5_CRITICAL_ANALYSIS.md  PHASE5_FRUSTRATIONS_AND_SOLUTIONS.md  SUBCHART_RENDERER_DESIGN.md  TECHNICAL_DESIGN.md  TUTORIAL.md
fixtures/demo-pack/: Pack.yaml  values.schema.yaml  values.yaml
fixtures/demo-pack/templates/: advanced.yaml  configmap.yaml  deployment.yaml  ingress.yaml  secret.yaml  service.yaml
fixtures/helm-nginx/: Chart.yaml  values.yaml
fixtures/helm-nginx/templates/: deployment.yaml
fixtures/pack-with-subcharts/: Pack.yaml  values.yaml
fixtures/pack-with-subcharts/charts/postgresql/: Pack.yaml  values.yaml
fixtures/pack-with-subcharts/charts/postgresql/templates/: statefulset.yaml
fixtures/pack-with-subcharts/charts/redis/: Pack.yaml  values.yaml
fixtures/pack-with-subcharts/charts/redis/templates/: deployment.yaml
fixtures/pack-with-subcharts/templates/: deployment.yaml
fixtures/simple-pack/: Pack.yaml  values.yaml
fixtures/simple-pack/templates/: deployment.yaml
website/: docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
website/docs/: architecture.md  cli-reference.md  intro.md  migrating-from-helm.mdx
website/docs/concepts/: pack-structure.md  schema-validation.md  templating.md  values.md
website/docs/getting-started/: create-pack.md  installation.md  quick-start.md  tutorial.md
website/docs/kubernetes/: crd-handling.md  health-checks.md  hooks.md  install-upgrade.md  rollback-uninstall.md  storage-drivers.md
website/docs/packaging/: create-archive.md  signing.md  verification.md
website/docs/repositories/: configuration.md  dependencies.md  oci-push.md  search-pull.md
website/docs/templating/: context-variables.md  control-structures.md  filters.md  functions.md
website/i18n/fr/: code.json
website/i18n/fr/docusaurus-plugin-content-docs/: current.json
website/i18n/fr/docusaurus-plugin-content-docs/current/: architecture.md  cli-reference.md  intro.md  migrating-from-helm.mdx
website/i18n/fr/docusaurus-plugin-content-docs/current/concepts/: pack-structure.md  schema-validation.md  templating.md  values.md
website/i18n/fr/docusaurus-plugin-content-docs/current/getting-started/: create-pack.md  installation.md  quick-start.md  tutorial.md
website/i18n/fr/docusaurus-plugin-content-docs/current/kubernetes/: crd-handling.md  health-checks.md  hooks.md  install-upgrade.md  rollback-uninstall.md  storage-drivers.md
website/i18n/fr/docusaurus-plugin-content-docs/current/packaging/: create-archive.md  signing.md  verification.md
website/i18n/fr/docusaurus-plugin-content-docs/current/repositories/: configuration.md  dependencies.md  oci-push.md  search-pull.md
website/i18n/fr/docusaurus-plugin-content-docs/current/templating/: context-variables.md  control-structures.md  filters.md  functions.md
website/i18n/fr/docusaurus-theme-classic/: footer.json  navbar.json
website/src/css/: custom.css
website/src/pages/: index.module.css  index.tsx
