[workspace]
resolver = "2"
members = [
    "crates/sherpack-core",
    "crates/sherpack-engine",
    "crates/sherpack-cli",
]


[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
repository = "https://github.com/sherpack/sherpack"
keywords = ["kubernetes", "helm", "jinja2", "devops", "k8s"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates
sherpack-core = { path = "crates/sherpack-core" }
sherpack-engine = { path = "crates/sherpack-engine" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Templating
minijinja = { version = "2", features = ["loader", "urlencode", "builtins"] }

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }

# Errors
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Async
tokio = { version = "1", features = ["full"] }

# Utils
semver = { version = "1.0", features = ["serde"] }
walkdir = "2"
sha2 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
once_cell = "1"
indexmap = { version = "2", features = ["serde"] }

# Validation
jsonschema = "0.26"

# Terminal
console = "0.15"
indicatif = "0.17"

# Testing
insta = { version = "1", features = ["yaml"] }

# String similarity (fuzzy matching)
strsim = "0.11"

[profile.release]
lto = true
codegen-units = 1
strip = true
