[workspace]
resolver = "2"
members = [
    "crates/sherpack-core",
    "crates/sherpack-engine",
    "crates/sherpack-kube",
    "crates/sherpack-repo",
    "crates/sherpack-convert",
    "crates/sherpack-cli",
]


[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
license = "Apache-2.0"
repository = "https://github.com/alegeay/sherpack"
keywords = ["kubernetes", "helm", "jinja2", "devops", "k8s"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
# Internal crates
sherpack-core = { path = "crates/sherpack-core", version = "0.2.0" }
sherpack-engine = { path = "crates/sherpack-engine", version = "0.2.0" }
sherpack-kube = { path = "crates/sherpack-kube", version = "0.2.0" }
sherpack-repo = { path = "crates/sherpack-repo", version = "0.2.0" }
sherpack-convert = { path = "crates/sherpack-convert", version = "0.2.0" }

# Parser
pest = "2.7"
pest_derive = "2.7"
phf = { version = "0.11", features = ["macros"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Templating
minijinja = { version = "2", features = ["loader", "urlencode", "builtins"] }

# CLI
clap = { version = "4", features = ["derive", "env", "string"] }

# Errors
thiserror = "2"
miette = { version = "7", features = ["fancy"] }

# Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Kubernetes
kube = { version = "0.98", features = ["runtime", "client", "derive"] }
k8s-openapi = { version = "0.24", features = ["v1_31"] }

# Utils
semver = { version = "1.0", features = ["serde"] }
walkdir = "2"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rand = "0.8"
once_cell = "1"
indexmap = { version = "2", features = ["serde"] }
humantime-serde = "1"

# Validation
jsonschema = "0.26"

# Terminal
console = "0.16"
indicatif = "0.18"

# Testing
insta = { version = "1", features = ["yaml"] }

# String similarity (fuzzy matching)
strsim = "0.11"

# Compression
zstd = "0.13"

# Diffing
similar = "2"

# Packaging
tar = "0.4"
flate2 = "1.0"
minisign = "0.7"

# HTTP & Networking
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }
url = "2"

# OCI
oci-distribution = "0.11"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# System
dirs = "6"
hex = "0.4"
tracing = "0.1"

# Testing extras
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
