[package]
name = "sherpack"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "The Kubernetes package manager with Jinja2 templates"

[[bin]]
name = "sherpack"
path = "src/main.rs"

[dependencies]
sherpack-core = { workspace = true }
sherpack-engine = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
miette = { workspace = true }
console = { workspace = true }
indicatif = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3"
serde_json = { workspace = true }
