[package]
name = "sherpack-convert"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Helm chart to Sherpack pack converter"
documentation = "https://docs.rs/sherpack-convert"
homepage = "https://alegeay.github.io/Sherpack/"

[dependencies]
sherpack-core = { workspace = true }
pest = { workspace = true }
pest_derive = { workspace = true }
phf = { workspace = true }
walkdir = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
regex = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tempfile = "3"
