[package]
name = "sherpack-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Jinja2 templating engine for Sherpack with Kubernetes-specific filters"

[dependencies]
sherpack-core = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
strsim = { workspace = true }
indexmap = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
semver = { workspace = true }
