[package]
name = "sherpack-engine"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Jinja2 templating engine for Sherpack with Kubernetes-specific filters"
documentation = "https://docs.rs/sherpack-engine"
homepage = "https://alegeay.github.io/Sherpack/"

[dependencies]
sherpack-core = { workspace = true }
minijinja = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
thiserror = { workspace = true }
miette = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
md-5 = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
chrono = { workspace = true }
strsim = { workspace = true }
indexmap = { workspace = true }
semver = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
