[package]
name = "sherpack-repo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Repository management for Sherpack - HTTP repos, OCI registries, and dependency resolution"
documentation = "https://docs.rs/sherpack-repo"
homepage = "https://alegeay.github.io/Sherpack/"

[dependencies]
# Internal
sherpack-core = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "gzip", "stream"] }

# OCI
oci-distribution = "0.11"

# Database (for cache)
rusqlite = { version = "0.38", features = ["bundled"] }

# Errors
thiserror = { workspace = true }

# Utils
semver = { workspace = true }
sha2 = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
url = "2"
dirs = "6"
hex = "0.4"
tracing = "0.1"

# Compression
flate2 = { workspace = true }
tar = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
wiremock = "0.6"
insta = { workspace = true }
